@@ -13,6 +13,7 @@ Bugfixes:
 - serialize RecordSet objects (Trac #201)
 - "NetConnection.Connect.Rejected" is sent for non-existing scopes to
   match result code of FCS/FMS
+- RTMPT through Jetty working again (Trac #213)
 
 
 Red5 0.6rc1 (2006-10-30)
